[tool.poetry]
name = "poetry add ultralytics opencv-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
ultralytics = "^8.3.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
